# network-science-practices

./: .gitignore  pyproject.toml
assignment-1/: NetworkAssignment1.ipynb  followers_1.json  following.json  liked_posts.json
assignment-2/: NetworkAssignment2.html  NetworkAssignment2.ipynb
