[tool.poetry]
name = "assignment-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ipykernel = "^6.22.0"
networkx = "^3.1"
matplotlib = "^3.7.1"
pygraphviz = "^1.10"
scipy = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
